--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
             text-decoration: underline;
         }
 
-        /* Centered white box for news content */
+        /* Corrected alignment for the content box on desktop */
         .content-box {
             background-color: rgba(255, 255, 255, 0.9);
             color: black;
@@ -74,7 +74,7 @@
             width: 90%;
             box-sizing: border-box;
             text-align: left;
-            margin-left: 20%;
+            margin-left: 20%; 
             max-height: 80vh;
             overflow-y: auto;
         }
